--- a/src/containers/contacts/contacts.scss
+++ b/src/containers/contacts/contacts.scss
@@ -5,13 +5,11 @@
     padding-bottom: 2rem;
 
     @media screen and (max-width: 1366px){
-        height: 90vh;
-        //padding-bottom: 4rem;
+        height: auto;
     }
 
     @media screen and (max-width: 1024px){
         height: auto;
-        //padding-bottom: 4rem;
     }
     
     @media screen and (max-width: 768px){
@@ -66,9 +64,8 @@
                     border-radius: 20px;
                     font-weight: 600;
                     
-                    &::placeholder {
-                        //color: var(--color-accent);
-                        //opacity: 70%;
+                    &::placeholder, ::-webkit-input-placeholder, ::-moz-placeholder, :-ms-input-placeholder, :-moz-placeholder {
+                        color: var(--color-accent);
                     }
                     
                 }
